tests/fail/intrinsics/out_of_bounds_ptr_2.stderr
error: Undefined Behavior: overflowing in-bounds pointer arithmetic
  --> RUSTLIB/core/src/ptr/const_ptr.rs:LL:CC
   |
LL |         unsafe { intrinsics::offset(self, count) }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overflowing in-bounds pointer arithmetic
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `std::ptr::const_ptr::<impl *const i8>::offset` at RUSTLIB/core/src/ptr/const_ptr.rs:LL:CC
note: inside `main` at $DIR/out_of_bounds_ptr_2.rs:LL:CC
  --> $DIR/out_of_bounds_ptr_2.rs:LL:CC
   |
LL |     let x = unsafe { x.offset(isize::MIN) };
   |                      ^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

